# cuda_gdb

./: CMakeLists.txt  main.cpp
libr/: CMakeLists.txt  main.cu  main.h
